--- a/ETEtapa1_AaronTobar002D/core/templates/inicio.html
+++ b/ETEtapa1_AaronTobar002D/core/templates/inicio.html
@@ -7,27 +7,9 @@
         {% load static %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
          rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'css/estilos1.css' %}"> 
+        <link rel="stylesheet" href="{% static 'css/estilos.css' %}"> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
-        <style>
-            #carrito{
-                width: 25px;
-                display: inline-block;
-                margin-left: 15px;
-            }
-
-            #carrito-total{
-                display: block;
-                text-align: center;
-                color: #ffffff;
-                background-color: red;
-                width: 20px;
-                height: 25px;
-                border-radius: 70%;
-                font-size: 14px;
-            }
-        </style>
         <script type="text/javascript">
             $(function(){
                 $(".btn").mouseover(function(){
@@ -64,7 +46,7 @@
                         <li class="nav-item"><a class="nav-link" href="#">inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="">agregar proveedor</a></li>
                         <li class="nav-item"><a class="nav-link" href="">modificar proveedor</a></li>
-                            <li class="nav-item"><a class="nav-link" href="">ver proveedores</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'proveedor' %}">ver proveedores</a></li>
                             <li class="nav-item"><a class="nav-link" href="">eliminar proveedor</a></li>
                             <li class="nav-item"><a class="nav-link" href="">iniciar sesion</a></li>
                     </ul>
@@ -115,23 +97,26 @@
                 <div class="row pt-3">
                     <h3 class="titulo pb-5 pt-1">productos</h3>
                 </div>
-
+                
                 <div class="row row-cols-1 row-cols-sm-1 row-cols-md-4 g-4">
+                    {% for producto in productos %}
                     <div class="col-sm">
-                        <div class="card text-center">
+                        <div class="card">
                             <div class="row row-cols-2 row-cols-sm-2 row-cols-md-1">
                                 <div class="col-sm-4 col-6">
-                                    <img src="" class="card-img-top img-fluid" alt="">
+                                    <img src="{{producto.imagenURL}}" class="card-img-top img-fluid" alt="">
                                 </div>
                                 <div class="col-sm-4 col-6">
-                                    <div class="card-body">
-                                        <h5 class="card-title"></h5>
+                                    <div class="card-body" >
+                                        <h5 class="card-title">{{producto.nombre}}</h5>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
+                
             </div>
         </div>
 
@@ -152,7 +137,6 @@
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'js/cart.js' %}"></script>holacomoestasmellamojuanita
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>holacomoestasmellamojuanita
     </body>
 </html>
