--- a/ETEtapa1_AaronTobar002D/core/static/css/estilos.css
+++ b/ETEtapa1_AaronTobar002D/core/static/css/estilos.css
@@ -1,14 +1,27 @@
+.navtext{
+    font-family: 'Press Start 2P', cursive;
+}
+
 .navbar{
-    background:linear-gradient(45deg,#000,#202020);
+    background:linear-gradient(45deg,#fe0061,#ff893b);
 }
 
 li{
     font-size: 16px;
 }
 
+@keyframes animate{
+    0%,100%{
+        filter:hue-rotate(0deg);
+    }
+    50%{
+        filter: hue-rotate(360deg);
+    }
+}
+
 .card-body{
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
 }
 
 .card-body a{
@@ -26,6 +39,21 @@ li{
     animation: animate 5s linear infinite;
     width: 100%;
     position: relative;
+}
+
+#aqui{
+    width: 100%;
+    position: relative;
+}
+
+#aqui img{
+    width: 100%;
+
+}
+
+#separador .content{
+    width: 100%;
+    height: 50px;
 }
 
 #texto{
@@ -64,7 +92,7 @@ li{
 
 .minis{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(3,1fr);
     grid-gap: 20px;
 }
 
