--- a/ETEtapa1_AaronTobar002D/core/templates/core/form_proveedor.html
+++ b/ETEtapa1_AaronTobar002D/core/templates/core/form_proveedor.html
@@ -90,16 +90,22 @@
             .input input{
                 border: none;
                 border-bottom: 1px solid;
-                width: 100%;
+                width: 80%;
                 outline: none;
                 background: transparent;
             }
 
             .input textarea{
                 border: 1px solid #000000;
-                width: 100%;
+                width: 80%;
+                height: 100px;
                 background: transparent;
                 border-radius: 8px;
+            }
+
+            .dos{
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
             }
         </style>
     </head>
@@ -124,13 +130,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'nosotros' %}">nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'galeria' %}">galeria</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">cerrar sesion</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">{{ user.username }}</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'carrito' %}">
-                            <img id="carrito" src="{% static 'img/carritoIcono.png' %}"></a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="">nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">galeria</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">cerrar sesion</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#"></a></li>
                     </ul>
                 </div>
             </div>
@@ -143,27 +146,66 @@
                         <form method="POST" action="" id="formulario" enctype="multipart/form-data">
                             {% csrf_token %}
 
-                            <div class="input">
-                                {{form.nombre.label}}
-                                {{form.nombre}}
+                            <div class="dos">
+                                <div class="input">
+                                    {{form.p_nombre.label}}
+                                    {{form.p_nombre}}
+                                </div>
+                                <div class="input">
+                                    {{form.s_nombre.label}}
+                                    {{form.s_nombre}}
+                                </div>
                             </div>
-                            <br>
-                            <div class="input">
-                                {{form.descripcion.label}}
-                                <hr>
-                                {{form.descripcion}}
+                            <div class="dos">
+                                <div class="input">
+                                    {{form.ap_paterno.label}}
+                                    {{form.ap_paterno}}
+                                </div>
+                                <div class="input">
+                                    {{form.ap_materno.label}}
+                                    {{form.ap_materno}}
+                                </div>
                             </div>
-                            <br>
                             <div class="input">
-                                {{form.precio.label}}
-                                {{form.precio}}
+                                {{form.telefono.label}}
+                                {{form.telefono}}
                             </div>
-                            <br>
                             <div class="input">
-                                {{form.foto.label}}
-                                {{form.foto}}
+                                {{form.direccion.label}}
+                                <br>
+                                {{form.direccion}}
                             </div>
-                            <br>
+                            <div class="input">
+                                {{form.email.label}}
+                                <br>
+                                {{form.email}}
+                            </div>
+                            <div class="dos">
+                                <div class="input">
+                                    {{form.pais.label}}
+                                    <br>
+                                    {{form.pais}}
+                                </div>
+
+                                <div class="input">
+                                    {{form.moneda.label}}
+                                    <br>
+                                    {{form.moneda}}
+                                </div>
+                            </div>
+                            
+                            <div class="input">
+                                {{form.cantrasenna.label}}
+                                {{form.cantrasenna}}
+                            </div>
+                            
+                            <div class="input">
+                                {{form.imagen.label}}
+                                <br>
+                                {{form.imagen}}
+                            </div>
+
+                                
                             <button class="btn btn-outline-dark" type="submit">agregar</button>
                         </form>
                     </div>
