--- a/ETEtapa1_AaronTobar002D/core/templates/inicio.html
+++ b/ETEtapa1_AaronTobar002D/core/templates/inicio.html
@@ -47,7 +47,7 @@
                         <li class="nav-item"><a class="nav-link" href="">agregar proveedor</a></li>
                         <li class="nav-item"><a class="nav-link" href="">modificar proveedor</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'proveedor' %}">ver proveedores</a></li>
-                            <li class="nav-item"><a class="nav-link" href="">eliminar proveedor</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'eliminar' %}">eliminar proveedor</a></li>
                             <li class="nav-item"><a class="nav-link" href="">iniciar sesion</a></li>
                     </ul>
                 </div>
@@ -78,6 +78,9 @@
                 <span class="visually-hidden">siguiente</span>
             </button>
         </div>
+
+        <div style="background: #000000; width: 100%; height: 75px;">
+        </div> 
 
         <div id="tarjetas">
 
