--- a/ETEtapa1_AaronTobar002D/core/templates/core/form_proveedor.html
+++ b/ETEtapa1_AaronTobar002D/core/templates/core/form_proveedor.html
@@ -8,8 +8,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
          rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/estilosusuario.css' %}">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
         <style>
@@ -108,13 +106,30 @@
                 grid-template-columns: repeat(2, 1fr);
             }
         </style>
+        <script>
+
+            var btn= document.getElementById('boton');
+
+            btn.addEventListener('click', generar);
+
+            function generar(){
+                var id= document.getElementById('id').value;
+                var nombre = document.getElementById('nombre').value;
+                var pais= document.getElementById('pais').value;
+
+                var contraseña = id.slice(0,1) + toUpperCase(nombre.slice(0,2)) + pais.slice(-1,-2);
+
+                document.getElementById('contrasenna').value = contraseña;
+            }
+
+        </script>
     </head>
     <body>
         {% load static %}
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand navtext" href="#">
-                    <img src="{% static 'img/logo1.png' %}" alt="" width="75">gamezone
+                    <img src="{% static 'img/logo.png' %}" alt="" width="75">ground zero
                 </a>
 
                 <button class="navbar-toggler"
@@ -130,10 +145,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">galeria</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">cerrar sesion</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"></a></li>
+                        <li class="nav-item"><a class="nav-link" href="">agregar proveedor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'modproveedor' %}">modificar proveedor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'proveedor' %}">ver proveedores</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'eliminar' %}">eliminar proveedor</a></li>
                     </ul>
                 </div>
             </div>
@@ -143,9 +158,14 @@
             <div class="container">
                 <div class="contenedor">
                     <div class="panel">
-                        <form method="POST" action="" id="formulario" enctype="multipart/form-data">
+                        <form method="POST" action="{% url 'contrasenna' %}" id="formulario" enctype="multipart/form-data">
                             {% csrf_token %}
 
+
+                            <div class="input">
+                                {{form.numero.label}}
+                                {{form.numero}}
+                            </div>
                             <div class="dos">
                                 <div class="input">
                                     {{form.p_nombre.label}}
@@ -193,12 +213,7 @@
                                     {{form.moneda}}
                                 </div>
                             </div>
-                            
-                            <div class="input">
-                                {{form.cantrasenna.label}}
-                                {{form.cantrasenna}}
-                            </div>
-                            
+
                             <div class="input">
                                 {{form.imagen.label}}
                                 <br>
@@ -206,7 +221,7 @@
                             </div>
 
                                 
-                            <button class="btn btn-outline-dark" type="submit">agregar</button>
+                            <button class="btn btn-outline-dark" type="submit" id="boton" >agregar</button>
                         </form>
                     </div>
                 </div>
@@ -215,8 +230,7 @@
 
         <footer>
             <div class="footer-content">
-                <h3>gamezone</h3>
-                <p>lleva tu experienca de juego al proximo nivel con gamezone</p>
+                <h3>ground zero</h3>
                 <ul class="redes">
                     <li><a href="#"><img src="{% static 'img/logos1.jpg' %}"></a></li>
                     <li><a href="#"><img src="{% static 'img/logos2.png' %}"></a></li>
