--- a/ETEtapa1_AaronTobar002D/core/templates/eliminar.html
+++ b/ETEtapa1_AaronTobar002D/core/templates/eliminar.html
@@ -8,8 +8,6 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
          rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/estilosusuario.css' %}">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
         <style>
@@ -96,7 +94,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand navtext" href="#">
-                    <img src="{% static 'img/logo.png' %}" alt="" width="75">gamezone
+                    <img src="{% static 'img/logo.png' %}" alt="" width="75">ground zero
                 </a>
 
                 <button class="navbar-toggler"
@@ -112,11 +110,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">agregar proveedor</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">modificar proveedor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'formproveedor' %}">agregar proveedor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'modproveedor' %}">modificar proveedor</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'proveedor' %}">ver proveedores</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">eliminar proveedor</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"></a></li>
                     </ul>
                 </div>
             </div>
@@ -141,8 +138,7 @@
 
         <footer>
             <div class="footer-content">
-                <h3>gamezone</h3>
-                <p>lleva tu experienca de juego al proximo nivel con gamezone</p>
+                <h3>ground zero</h3>
                 <ul class="redes">
                     <li><a href="#"><img src="{% static 'img/logos1.jpg' %}"></a></li>
                     <li><a href="#"><img src="{% static 'img/logos2.png' %}"></a></li>
