--- a/ETEtapa1_AaronTobar002D/core/templates/inicio.html
+++ b/ETEtapa1_AaronTobar002D/core/templates/inicio.html
@@ -44,11 +44,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#">inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">agregar proveedor</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">modificar proveedor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'formproveedor' %}">agregar proveedor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'modproveedor' %}">modificar proveedor</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'proveedor' %}">ver proveedores</a></li>
                             <li class="nav-item"><a class="nav-link" href="{% url 'eliminar' %}">eliminar proveedor</a></li>
-                            <li class="nav-item"><a class="nav-link" href="">iniciar sesion</a></li>
                     </ul>
                 </div>
             </div>
