--- a/ETEtapa1_AaronTobar002D/core/templates/proveedores.html
+++ b/ETEtapa1_AaronTobar002D/core/templates/proveedores.html
@@ -15,6 +15,7 @@
                 background-image: url("{% static 'img/fotofoto.jpg' %}");
                 background-repeat: no-repeat;
                 background-size: cover;
+                min-height: 50vh;
             }
 
             .container{
@@ -71,7 +72,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand navtext" href="#">
-                    <img src="{% static 'img/logo.png' %}" alt="" width="75">gamezone
+                    <img src="{% static 'img/logo.png' %}" alt="" width="75">ground zero
                 </a>
 
                 <button class="navbar-toggler"
@@ -87,11 +88,10 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio' %}">inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">agregar porveedor</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">modificar proveedor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'formproveedor' %}">agregar porveedor</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'modproveedor' %}">modificar proveedor</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">ver proveedores</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'eliminar' %}">eliminar proveedor</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"></a></li>
                     </ul>
                 </div>
             </div>
@@ -125,8 +125,7 @@
 
         <footer>
             <div class="footer-content">
-                <h3>gamezone</h3>
-                <p>lleva tu experienca de juego al proximo nivel con gamezone</p>
+                <h3>ground zero</h3>
                 <ul class="redes">
                     <li><a href="#"><img src="{% static 'img/logos1.jpg' %}"></a></li>
                     <li><a href="#"><img src="{% static 'img/logos2.png' %}"></a></li>
